force-app/main/default/objects/Vendor_Program__c/Vendor_Program__c.object-meta.xml
<CustomObject>
    <label>Vendor Program</label>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>Vendor Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>