force-app/main/default/objects/Vendor_Program__c/fields/Campaign_Automation_Management__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Automation_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Automation Management</label>
    <referenceTo>Campaign_Automation_Management__c</referenceTo>
    <relationshipLabel>Vendor Programs</relationshipLabel>
    <relationshipName>Vendor_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>