force-app/main/default/objects/Vendor_Program__c/fields/Legacy_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Salesforce_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
    <label>Legacy Salesforce Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>