force-app/main/default/objects/Vendor_Program__c/fields/Program_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Order_Type__c</fullName>
    <label>Program Order Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>