force-app/main/default/objects/Vendor_Program__c/fields/Program_State__c.field-meta.xml
<CustomField>
    <fullName>Program_State__c</fullName>
    <label>Program State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>Non-NY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>