force-app/main/default/objects/Vendor_Program__c/fields/Vendor_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Code__c</fullName>
    <label>Vendor Program Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>